AC_PREREQ(2.61)
AC_INIT([pgconnection], [0.0.1], [leonhad@gmail.com])
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([include/config.h.in])
AC_CONFIG_HEADER([include/config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_HOST
AC_PROG_LIBTOOL

AC_LANG([C++])
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_OUTPUT( \
    Makefile \
    include/Makefile \
    src/Makefile \
    test/Makefile
)
