## $Header$
##
## Autor: Edson Alves - edsomjr@gmail.com
## Tamanho da tabulação: 4
## Codificação: ISO 8859-1
## $Date$
##
## Makefile para os arquivos de cabeçalho.
##
## $Revision$
##

# Diretório onde os arquivos serão instalados
libconnincludedir = $(includedir)/conn

# Arquivos a serem instalados
libconninclude_HEADERS = 	\
	connection.h			\
	dao.h					\
	resultset.h				\
	sqlexception.h

## $Source$
