## $Header$
##
## Autor: Edson Alves - edsomjr@gmail.com
## Tamanho da tabulação: 4
## Codificação: ISO 8859-1
## $Date$
##
## Arquivo alvo para a construção da biblioteca libconn.
##
## $Revision$
##

# Descrição da biblioteca
lib_LTLIBRARIES = libconn.la

# Flags que determinam a construção da biblioteca
libconn_la_LDFLAGS =

# Arquivos necessários para a construção da biblioteca
libconn_la_SOURCES = 	\
	resultset.cpp		\
	connection.cpp		\
	dao.cpp

# Bibliotecas usadas na construção da biblioteca
libconn_la_LIBADD =

# Flags a serem utilizadas na construção da biblioteca
INCLUDES = -I/usr/include/postgresql

# Flags de compilação
AM_CFLAGS = -ggdb -pedantic -Wall -fPIC

## $Source$
